--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,11 @@
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
+        <link rel= "stylesheet" href= "/css/boootsrap.css">
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
+        <link href ="/css/bootstrap.css" rel = "stylesheet">
 
     </head>
     <body>
@@ -22,6 +24,7 @@
           </div>
 
           {{ content }}
+
 
           <div class="footer">
             <div class="contact">
@@ -39,6 +42,8 @@
             </div>
           </div>
         </div>
+         <script src="/js/jquery.js"> </script>        
+          <script src="/js/main.js"> </script>
 
     </body>
 </html>
